  (Matthieu Casanova)

- OperatingSystem.isOS2() method is removed since OS/2 cannot run jEdit since
  many years (Matthieu Casanova)

- OperatingSystem.isDOSDerived() is now deprecated since OS/2 do not exists
  anymore Windows is the only DOS derived OS, so use OperatingSystem.isWindows()
  instead (Matthieu Casanova)

}}}
{{{ Editing

- New metapost.xml mode (#1606258 - Kondr)

- Updated cobol.xml (#2654343 - Markus Röhner)

- fortran90.xml: new Fortran90 edit mode (#2406563 - Jonni Lehtiranta)

- roff.xml: New ROFF/GROFF/TROFF edit mode 
  (#3081484 - Kostas Michalopoulos, Robert Schwenn)

- nsis2.xml: Added Java/C style comments. (#2976473) 

- Ruby Edit Mode: Improved Symbol Highlighting 
   (#1918110 - Ingo Tomahogh, Alan Ezust)

- "velocity_pure.xml" edit mode to replace older sgml-based velocity.xml.
   Velocity keywords nested within markup tags incorrectly highlighted.
   (#1285741 - Robert Schwenn)

- Updated D edit mode (#3463009 - Olivier Pisano)

- Removed special highlight for object access and creation in php edit mode
  (#2985508, #3151072) (Matthieu Casanova)

- Major simplification of phpdoc to make it look more like javadoc
  (#1803310, #3029383, #3316733) (Matthieu Casanova)

- Added some missing keywords to vrml2 edit mode (patch #3471586) (Jimmy Chaw)

- Using no highlight or limited syntax highlight in large buffers now also
  disables soft wrap (Matthieu Casanova)

- Using no highlight or limited syntax highlight in large buffers now disables
  highlight of very long lines (Matthieu Casanova)

- Latex Indentation a nuisance (#3432974)

- Made it possible to disable automatic indentation by buffer or by edit
  mode, and created a status widget to toggle the setting (Evan Wright)

- Fix for tracker 2976661, script tag attributes not syntax highlighted.
  (Dale Anson)

- Fix for tracker 846913, jsp syntax highlighting for single line comments.
  (Dale Anson)

}}}
{{{ UI

- Text Area option for Search System Fonts in Font substitution